<resources>
    <string name="app_name">LRIPL_DEALERS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_products">Products</string>
    <string name="menu_enquiries">Enquiries</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contactus">Help &amp; Feedback</string>
    <string name="menu_aboutus">About LRIPL</string>
    <string name="menu_logout">Logout</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="phone_number_1_validation">Please Enter Your Phone Number.</string>
    <string name="phone_number_2_validation">Please Enter Valid Phone Number.</string>
    <string name="phone_number_suffix">+91</string>
    <string name="phone_number">Mobile number</string>

    <string name="sentotp">Verify Me</string>
    <string name="login_text">Enter your mobile number to receive a verification code</string>
    <string name="otp_text">An OTP has been sent to the entered mobile number %1$s </string>
    <string name="otp_text_1">You will get OTP by SMS in 15 seconds.</string>
    <string name="login_with_other_number">Login with another phone number</string>
    <string name="verify_btn">VERIFY</string>
    <string name="resend_btn">RESEND</string>

    <string name="name_validation">Please enter your name.</string>
    <string name="last_name_validation">Please enter last name.</string>
    <string name="email_id_validation">Please enter a valid email id.</string>
    <string name="company_name_validation">Please enter company name.</string>
    <string name="gst_number_validation">Please enter a valid gst number.</string>
    <string name="mobile_number_validation">Please enter a valid mobile number.</string>
    <string name="state_validation">Please select state.</string>
    <string name="network_error">Some thing went wrong, Please try again.</string>
    <string name="profile">Profile</string>
    <string name="products_list">Products</string>

    <string name="cart_list_screen_name">Enquiry Cart</string>
    <string name="enquiry_details_screen">Enquiries</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_msg">Do you want to logout ?</string>
    <string name="txt_opt_msg">A text message with code \n was sent to your phone</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="txt_did_not_get">Didn\'t get OTP?</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_change_number">Change Number?</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_verify_mobile">Verify Mobile</string>

    <string name="txt_india_num_one">India`s No. 1</string>
    <string name="product_description_not_found">No description available</string>
    <string name="product_description">Please Match The Image With Your Existing Remote Before Placing the Order. It works with almost all Samsung 3D LED TV as replacement remote. Battery Type : AAA Dimension (LxWxH) : 153.12 X 52.61 X 21.51 Number of Keys : 47 Color GREY and BLACK Weight(Gms.) : 73.09</string>
    <string name="read_more">SEE MORE</string>
    <string name="read_less">&#160; &#160; SEE LESS</string>
    <string name="asteriskred">*</string>
    <string name="hint_name">Name*</string>

    <string name="txt_products_count">%1$s products</string>
    <string name="txt_product_count">%1$s product</string>

    <string name="enquiry_success_screen_name">Enquiry Confirmed</string>
    <string name="txt_lripl_phone_num">91-120-2563 903</string>
    <string name="txt_any_queries">Any Queries</string>
    <string name="txt_phone_call_tel">tel:</string>
    <string name="txt_lripl_call_us">Call Us</string>
    <string name="txt_lripl_send_email">Send Email</string>
    <string name="txt_send_email_to">info@lripl.com</string>
    <string name="txt_send_email_subject" >LRIPL App Feedback"</string>
    <string name="txt_provide_feedback">Provide Feedback</string>
</resources>
